# python_module_template_module

./: MAKEFILE  README.md  pyproject.toml
python_module_template/cli/: create_python_module.py
