[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="python_module_template"
version="0.0.1"
description="SHORT DESC."
readme="README.md"
authors=[
    {name="MatteoLacki",email="matteo.lacki@gmail.com"},
]
dependencies = [
    "click",
]
requires-python = ">=3.6"


[project.scripts]
create_python_module = "python_module_template.cli.create_python_module:create_python_module"

[project.urls]
homepage="https://github.com/MatteoLacki/python_module_template.git"
repository="https://github.com/MatteoLacki/python_module_template.git"

[tool.uv]
reinstall-package = ["python_module_template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
